Update and modernize `adapter-cloudflare-workers`

--- a/packages/adapter-cloudflare-workers/tsconfig.json
+++ b/packages/adapter-cloudflare-workers/tsconfig.json
@@ -12,5 +12,5 @@
 			"@sveltejs/kit": ["../kit/types/index"]
 		}
 	},
-	"include": ["**/*.js", "ambient.d.ts"]
+	"include": ["index.js", "ambient.d.ts", "src/worker.js"]
 }
