--- a/packages/adapter-cloudflare-workers/package.json
+++ b/packages/adapter-cloudflare-workers/package.json
@@ -19,19 +19,24 @@
 	"types": "index.d.ts",
 	"files": [
 		"files",
+		"index.js",
 		"index.d.ts"
 	],
 	"scripts": {
+		"build": "esbuild src/worker.js --bundle --outfile=files/worker.js --external:SERVER --external:MANIFEST --external:__STATIC_CONTENT_MANIFEST --format=esm && cp src/_package.json files/_package.json",
 		"lint": "eslint --ignore-path .gitignore \"**/*.{ts,js,svelte}\" && npm run check-format",
 		"format": "npm run check-format -- --write",
-		"check": "tsc",
-		"check-format": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore"
+		"check": "tsc --skipLibCheck",
+		"check-format": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore",
+		"prepublishOnly": "npm run build"
 	},
 	"dependencies": {
 		"@iarna/toml": "^2.2.5",
-		"esbuild": "^0.14.21"
+		"esbuild": "^0.14.21",
+		"worktop": "0.8.0-next.12"
 	},
 	"devDependencies": {
+		"@types/ws": "^8.5.3",
 		"@cloudflare/kv-asset-handler": "^0.2.0",
 		"typescript": "^4.6.2"
 	}
